added my clock in three lines in javascript_clock

--- a/clock.html
+++ b/clock.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="clock.css">
 </head>
 <body>
-   <div id="container">    
+   <div id="container">  
+     my clock  
+     my clockmy clock
      <div id="ClockDisplay" class="clock" onload="showTime()"></div>
    </div>
 
