--- a/clock.html
+++ b/clock.html
@@ -10,7 +10,8 @@
 <body>
    <div id="container">  
      my clock  
-     my clockmy clock
+     my clock
+     my clock
      <div id="ClockDisplay" class="clock" onload="showTime()"></div>
    </div>
 
